<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_match_black_24dp"
        android:title="@string/navigation_transactions" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/navigation_scan" />

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_match_black_24dp"
        android:title="@string/navigation_matches" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/navigation_profile" />

</menu>