<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.expensereceiptmatcher.presentation.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.expensereceiptmatcher.presentation.scan.ScanFragment"
        android:label="@string/navigation_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.expensereceiptmatcher.presentation.matches.MatchesFragment"
        android:label="@string/navigation_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.expensereceiptmatcher.presentation.settings.SettingsFragment"
        android:label="@string/navigation_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>